--- a/themes/dohmh/layouts/key-topics/heatstory.html
+++ b/themes/dohmh/layouts/key-topics/heatstory.html
@@ -271,7 +271,7 @@
           </div>
           </div>
 
-          <div>
+          <div class="mb-2">
             <div class="btn-toggle">
               <button class="btn btn-block btn-md btn-outline-primary" data-toggle="collapse" data-target="#toggle-target" aria-expanded="false" aria-controls="toggle-target">
                   <span class="title">Project credits</span>
@@ -284,15 +284,15 @@
               <p>This project was part of a nationwide campaign from the NIHHIS (National Integrated Heat Health Information System) and jointly developed by NOAA (National Oceanic and Atmospheric Administration) and the CDC (Centers for Disease Control and Prevention). The NYC campaign partnered with South Bronx Unite and was funded by NOAA and Columbia University’s Earth Frontiers Grant. Data collection and analysis were the result of a partnership with CAPA Strategies.</p>
             <ul class="extensible-list">
                 </li>
-                <li>Liv Yoon, Principal Investigator</li>
-                  <li>Christian Braneon, Co-Investigator</li>
-                  <li>Melissa Barber, Founding Member and Advisory Board Member, South Bronx Unite</li>
-                  <li>Mychal Johnson, Founding Member and Advisory Board Member, South Bronx Unite</li>
-                  <li>Arif Ullah, Executive Director, South Bronx Unite</li>
-                  <li>Jolie Villegas, Research Assistant</li>
-                  <li>Kemuning Adiputri, Student Consultant</li>
-                  <li>Jason Biegel, Software Engineer</li>
-                  <li>Tom Zinckgraf, Software Engineer</li>
+                <li><strong>Liv Yoon, Principal Investigator</strong></li>
+                  <li><strong>Christian Braneon,</strong> Co-Investigator</li>
+                  <li><strong>Melissa Barber,</strong> Founding Member and Advisory Board Member, South Bronx Unite</li>
+                  <li><strong>Mychal Johnson,</strong> Founding Member and Advisory Board Member, South Bronx Unite</li>
+                  <li><strong>Arif Ullah,</strong> Executive Director, South Bronx Unite</li>
+                  <li><strong>Jolie Villegas,</strong> Research Assistant</li>
+                  <li><strong>Kemuning Adiputri,</strong> Student Consultant</li>
+                  <li><strong>Jason Biegel,</strong> Software Engineer</li>
+                  <li><strong>Tom Zinckgraf,</strong> Software Engineer</li>
                   <li><strong>Project partners:</strong></li>
                   <li><a href="https://www.capastrategies.com/" target="_blank">CAPA Strategies</li>
                   <li><a href="https://www.southbronxunite.org/" target="_blank">South Bronx Unite</a></li>
@@ -301,6 +301,22 @@
             </ul>
           </div>
           </div>
+
+        <div>
+          <div class="btn-toggle">
+            <button class="btn btn-block btn-md btn-outline-primary" data-toggle="collapse" data-target="#toggle-target-2" aria-expanded="false" aria-controls="toggle-target-1">
+                <span class="title">About the data and stories </span>
+            </button>
+        </div>
+
+        <div class="collapse p-2 border mb-2" id="toggle-target-2">
+          <p> Stories featured in the South Bronx and northern Manhattan were collected in partnership with South Bronx Unite, WE ACT for Environmental Justice, and CBOs 9-12. Both of these areas were selected because they are vulnerable to the health risks of extreme heat due to economic, racial, and social inequities.</p>
+          <p> hyperlocal data vs citywide data</p>
+          <p> This heat story map features data collected across New York City and hosted on the Environment and Health Data Portal about air quality, air conditioning access, neighborhood poverty, and more. You can explore each dataset more thoroughly through our Data Explorer. The map also features a limited amount of data collected in northern Manhattan and the South Bronx because of the parameters of the original study. These hyperlocal data layers were generated through the community science approach described above, and provide valuable insights into block-level differences at different times of day. </p>
+    </ul>
+  </div>
+    </div>
+
         </div>
       </div>
     </div>
