improve data story path names

--- a/themes/dohmh/layouts/data-features/hvi.html
+++ b/themes/dohmh/layouts/data-features/hvi.html
@@ -132,7 +132,7 @@
                 
                 <div class="row no-gutters py-1 mr-2">
                     <div class="col mb-3">
-                        <p><i class="far fa-question-circle"></i>&nbsp;Green space is <a href={{ relURL "data-explorer/active-design/?id=2157" }}>tree</a>, <a href={{ relURL "data-explorer/active-design/?id=2143" }}>grass, or shrub cover</a>. Green space helps cool a neighborhood, address the <a href={{ relURL "data-stories/localtemp" }} target="_blank">UHI</a>, and create a resilient city. It also has a small association with heat mortality, weaker than other components in the index. <span class="badge badge-light">Median neighborhood: 25.0%</span>
+                        <p><i class="far fa-question-circle"></i>&nbsp;Green space is <a href={{ relURL "data-explorer/active-design/?id=2157" }}>tree</a>, <a href={{ relURL "data-explorer/active-design/?id=2143" }}>grass, or shrub cover</a>. Green space helps cool a neighborhood, address the <a href={{ relURL "data-stories/urban-heat-island" }} target="_blank">UHI</a>, and create a resilient city. It also has a small association with heat mortality, weaker than other components in the index. <span class="badge badge-light">Median neighborhood: 25.0%</span>
                         </p>
                     </div>
                 </div>
