--- a/themes/dohmh/layouts/key-topics/cooling-info.html
+++ b/themes/dohmh/layouts/key-topics/cooling-info.html
@@ -29,19 +29,19 @@
           <div class="border p-1 mt-2">
             Learn more about: 
             <ul></ul>
-              <li> heat, air quality, and how to
+              <li> Heat, air quality, and how to
                 <a href="https://www.nyc.gov/site/doh/health/emergency-preparedness/emergencies-extreme-weather-heat.page#:~:text=Signs%20of%20Heat%20Illness&text=Heat%20stroke%20occurs%20when%20the,Confusion%2C%20hallucinations%20and%20disorientation">prevent weather-related illness.
                 </a>
               </li>
               <li>
                 <a href="../../climatehealth/hvi/">
-                  heat and the built environment in your
+                  Heat and the built environment in your
                   neighborhood.
                 </a>
               </li>
               <li>
                 <a href="../../airquality/realtime/">
-                  air quality in your neighborhood.</a
+                  Real-time air quality.</a
                 >
               </li>
             </ul>
