--- a/themes/dohmh/layouts/data-features/heatstory.html
+++ b/themes/dohmh/layouts/data-features/heatstory.html
@@ -221,28 +221,24 @@
     <div class="col-11 mx-auto">
 
       <div class="row">
-        <div class="col-md-5 ml-auto">
-          <div class="card content-card mb-2">
-            <div class="card-content">
-              <div class="card-body">
-                <h4 class="card-title">Submit your heat story</h4>
-                <p>Tell us how heat affects you - your health, in your home, your neighborhood, or any aspect of your life. </p>
-                <p><a href='https://docs.google.com/forms/d/e/1FAIpQLSdwGh2hb4LeLsQxH-w9awMAF2qc_UgOsD_bBYhRVa3ECxM8Bg/viewform'>Submit a story here</a> - you can tell us anything you like about how heat affects your life. You can even upload pictures of your home, neighborhood, park, or anything else that helps illustrate your story. You can add your name, or remain anonymous - it's up to you.</p>
-                <p>We'll add your story to the map - we'll only include whatever details or information you choose to share with us. </p>                   
-              </div>
-            </div>
-          </div>
+        <div class="col-md-8 col-sm-12">
+          <h4 class="h5">Submit your heat story</h4>
+          <p>Tell us how heat affects you - your health, in your home, your neighborhood, or any aspect of your life. </p>
+          <p><a href='https://docs.google.com/forms/d/e/1FAIpQLSdwGh2hb4LeLsQxH-w9awMAF2qc_UgOsD_bBYhRVa3ECxM8Bg/viewform'>Submit a story here</a> - you can tell us anything you like about how heat affects your life. You can even upload pictures of your home, neighborhood, park, or anything else that helps illustrate your story. You can add your name, or remain anonymous - it's up to you.</p>
+          <p>We'll add your story to the map - we'll only include whatever details or information you choose to share with us. </p>                   
+
         </div>
+      </div>
 
-        <div class="col-md-5 mr-auto">
-          <div class="mb-2">
-            <div class="btn-toggle">
-              <button class="btn btn-block btn-md btn-outline-primary" data-toggle="collapse" data-target="#toggle-target-1" aria-expanded="false" aria-controls="toggle-target-1">
-                  <span class="title">Community science data collection</span>
-              </button>
+      <div class="row my-4">
+        <div class="col-md-4 col-sm-12">
+          <div class="btn-toggle">
+            <button class="btn btn-block btn-md btn-outline-primary" data-toggle="collapse" data-target="#toggle-target-1" aria-expanded="false" aria-controls="toggle-target-1">
+                <span class="title">Community science data collection</span>
+            </button>
           </div>
 
-          <div class="collapse p-2 border mb-2" id="toggle-target-1">
+        <div class="collapse p-2 border mb-2 fs-sm" id="toggle-target-1">
             <p> Using a community science approach, the data collection process was
               led by residents living in areas most affected by heat. On Saturday
               July 24, 2021, these community scientists traversed along 10
@@ -258,7 +254,7 @@
               design the routes around areas of concern to residents. These
               included intersections, bus stops, common corridors of activity, as
               well as public housing.</p>
-          <h4 class="card title">How do the methods and results differ from other projects?</h4>
+          <h5 class="h6">How do the methods and results differ from other projects?</h4>
           <ul>
               <li><strong>Measures ambient temperature:</strong> Previous models have been based on
           satellite data, which record the temperature of the ground itself.
@@ -279,54 +275,52 @@
           and evening) to capture how heat may vary throughout the day.</li>
       </ul>
           </div>
-          </div>
+        </div>
 
-          <div class="mb-2">
-            <div class="btn-toggle">
-              <button class="btn btn-block btn-md btn-outline-primary" data-toggle="collapse" data-target="#toggle-target" aria-expanded="false" aria-controls="toggle-target">
-                  <span class="title">Project credits</span>
-              </button>
-          </div>
-      
-          <div class="collapse p-2 border" id="toggle-target">
-            <p> This project was originally titled <strong>"Addressing the Urban Heat Island Effect through an Equity Lens: A Community Science Project,”</strong> and combines community science with interviews to create a way to look at heat vulnerability that focuses on the intersections of extreme heat, health, and social inequities.
+        <div class="col-md-4 col-sm-12">
+          <div class="btn-toggle">
+            <button class="btn btn-block btn-md btn-outline-primary" data-toggle="collapse" data-target="#toggle-target" aria-expanded="false" aria-controls="toggle-target">
+                <span class="title">Project credits</span>
+            </button>
+        </div>
+    
+        <div class="collapse p-2 border fs-sm" id="toggle-target">
+          <p> This project was originally titled <strong>"Addressing the Urban Heat Island Effect through an Equity Lens: A Community Science Project,”</strong> and combines community science with interviews to create a way to look at heat vulnerability that focuses on the intersections of extreme heat, health, and social inequities.
 
-              <p>This project was part of a nationwide campaign from the NIHHIS (National Integrated Heat Health Information System) and jointly developed by NOAA (National Oceanic and Atmospheric Administration) and the CDC (Centers for Disease Control and Prevention). The NYC campaign partnered with South Bronx Unite and was funded by NOAA and Columbia University’s Earth Frontiers Grant. Data collection and analysis were the result of a partnership with CAPA Strategies.</p>
-            <ul class="extensible-list">
-                </li>
-                <li><strong>Liv Yoon, Principal Investigator</strong></li>
-                  <li><strong>Christian Braneon,</strong> Co-Investigator</li>
-                  <li><strong>Melissa Barber,</strong> Founding Member and Advisory Board Member, South Bronx Unite</li>
-                  <li><strong>Mychal Johnson,</strong> Founding Member and Advisory Board Member, South Bronx Unite</li>
-                  <li><strong>Arif Ullah,</strong> Executive Director, South Bronx Unite</li>
-                  <li><strong>Jolie Villegas,</strong> Research Assistant</li>
-                  <li><strong>Kemuning Adiputri,</strong> Student Consultant</li>
-                  <li><strong>Jason Biegel,</strong> Software Engineer</li>
-                  <li><strong>Tom Zinckgraf,</strong> Software Engineer</li>
-                  <li><strong>Project partners:</strong></li>
-                  <li><a href="https://www.capastrategies.com/" target="_blank">CAPA Strategies</li>
-                  <li><a href="https://www.southbronxunite.org/" target="_blank">South Bronx Unite</a></li>
-                  <li><a href="https://www.weact.org/" target="_blank">WE ACT for Environmental Justice</a></li>
-                  <li>Community Boards 9-12</li>
-            </ul>
-          </div>
-          </div>
+            <p>This project was part of a nationwide campaign from the NIHHIS (National Integrated Heat Health Information System) and jointly developed by NOAA (National Oceanic and Atmospheric Administration) and the CDC (Centers for Disease Control and Prevention). The NYC campaign partnered with South Bronx Unite and was funded by NOAA and Columbia University’s Earth Frontiers Grant. Data collection and analysis were the result of a partnership with CAPA Strategies.</p>
+          <ul class="extensible-list">
+              </li>
+              <li><strong>Liv Yoon, Principal Investigator</strong></li>
+                <li><strong>Christian Braneon,</strong> Co-Investigator</li>
+                <li><strong>Melissa Barber,</strong> Founding Member and Advisory Board Member, South Bronx Unite</li>
+                <li><strong>Mychal Johnson,</strong> Founding Member and Advisory Board Member, South Bronx Unite</li>
+                <li><strong>Arif Ullah,</strong> Executive Director, South Bronx Unite</li>
+                <li><strong>Jolie Villegas,</strong> Research Assistant</li>
+                <li><strong>Kemuning Adiputri,</strong> Student Consultant</li>
+                <li><strong>Jason Biegel,</strong> Software Engineer</li>
+                <li><strong>Tom Zinckgraf,</strong> Software Engineer</li>
+                <li><strong>Project partners:</strong></li>
+                <li><a href="https://www.capastrategies.com/" target="_blank">CAPA Strategies</li>
+                <li><a href="https://www.southbronxunite.org/" target="_blank">South Bronx Unite</a></li>
+                <li><a href="https://www.weact.org/" target="_blank">WE ACT for Environmental Justice</a></li>
+                <li>Community Boards 9-12</li>
+          </ul>
+        </div>
+        </div>
 
-        <div>
+        <div class="col-md-4 col-sm-12">
           <div class="btn-toggle">
             <button class="btn btn-block btn-md btn-outline-primary" data-toggle="collapse" data-target="#toggle-target-2" aria-expanded="false" aria-controls="toggle-target-1">
                 <span class="title">About the data and stories </span>
             </button>
         </div>
 
-        <div class="collapse p-2 border mb-2" id="toggle-target-2">
+        <div class="collapse p-2 border mb-2 fs-sm" id="toggle-target-2">
           <p> Stories featured in the South Bronx and northern Manhattan were collected in partnership with South Bronx Unite, WE ACT for Environmental Justice, and CBOs 9-12. Both of these areas were selected because they are vulnerable to the health risks of extreme heat due to economic, racial, and social inequities.</p>
           <p> hyperlocal data vs citywide data</p>
           <p> This heat story map features data collected across New York City and hosted on the Environment and Health Data Portal about air quality, air conditioning access, neighborhood poverty, and more. You can explore each dataset more thoroughly through our Data Explorer. The map also features a limited amount of data collected in northern Manhattan and the South Bronx because of the parameters of the original study. These hyperlocal data layers were generated through the community science approach described above, and provide valuable insights into block-level differences at different times of day. </p>
     </ul>
   </div>
-    </div>
-
         </div>
       </div>
     </div>
