--- a/themes/dohmh/layouts/data-features/heatstory.html
+++ b/themes/dohmh/layouts/data-features/heatstory.html
@@ -183,7 +183,7 @@
     </div>
   </div>
 
-  <div class="row my-3">
+  <div class="row mt-3">
     <div class="col">
       <h3 class="h4">Explore New Yorkers' heat stories</h3>
     </div>
