Change refresh button fw

--- a/themes/dohmh/layouts/data-features/heatstory.html
+++ b/themes/dohmh/layouts/data-features/heatstory.html
@@ -55,6 +55,8 @@
 
   #refreshButton {
     position: absolute;
+    font-family: 'inherit', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 700;
     top: 20px;
     right: 20px;
     padding: 10px;
