--- a/themes/dohmh/layouts/data-features/heatstory.html
+++ b/themes/dohmh/layouts/data-features/heatstory.html
@@ -55,7 +55,7 @@
 
   #refreshButton {
     position: absolute;
-    font-family: 'inherit', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: inherit, Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 700;
     top: 20px;
     right: 20px;
@@ -209,7 +209,7 @@
     </div>
     <div class="col-8 mx-auto">
       <div id="map">
-        <button id="refreshButton">Reset</button>
+        <button id="refreshButton" class="btn btn-sm btn-light btn-white"><i class="fas fa-undo" aria-hidden="true"> </i><span class="sr-only"> Reset</span></button>
       </div>
       <div class="border" id="legendDescriptions"></div>
     </div>
