--- a/themes/dohmh/layouts/data-features/heatstory.html
+++ b/themes/dohmh/layouts/data-features/heatstory.html
@@ -70,8 +70,8 @@
     overflow-y: auto;
     /* font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
     font-family: sans-serif;
-    letter-spacing: 1px;
-    font-weight: normal;
+    letter-spacing: 0px;
+    font-weight: 400;
     border-radius: 5px;
     background-color: #F5F5F5;
     opacity: 0.95;
