--- a/themes/dohmh/layouts/data-features/2024-heat-report.html
+++ b/themes/dohmh/layouts/data-features/2024-heat-report.html
@@ -58,7 +58,7 @@
 
     <div class="row my-3">
         <div class="col-md-10 col-sm-12 mx-auto my-1">
-            <h3>Demographics</h3>
+            <h3 class="h4">Demographics</h3>
         </div>
         <div class="col-md-5 ml-auto col-sm-12">
             {{- with .Resources.GetMatch "2-demographics.md" -}}
@@ -77,7 +77,7 @@
 
     <div class="row my-3">
         <div class="col-md-10 col-sm-12 mx-auto my-1">
-            <h3>Health Risk Factors</h3>
+            <h3 class="h4">Health Risk Factors</h3>
         </div>
         <div class="col-md-5 ml-auto col-sm-12">
             {{- with .Resources.GetMatch "3-healthriskfactors.md" -}}
@@ -96,7 +96,7 @@
 
     <div class="row my-3">
         <div class="col-md-10 col-sm-12 mx-auto my-1">
-            <h3>Heat Exposure Circumstances</h3>
+            <h3 class="h4">Heat Exposure Circumstances</h3>
         </div>
         <div class="col-md-5 ml-auto col-sm-12">
             {{- with .Resources.GetMatch "4-exposure.md" -}}
@@ -121,7 +121,7 @@
 
     <div class="row mt-1 mb-3">
         <div class="col-md-10 col-sm-12 mx-auto my-1">
-            <h3>Heat Exacerbated Deaths</h3>
+            <h2>Heat Exacerbated Deaths</h2>
         </div>
         <div class="col-md-5 ml-auto col-sm-12">
             {{- with .Resources.GetMatch "5-heat-ex-deaths.md" -}}
@@ -140,7 +140,7 @@
 
     <div class="row my-3">
         <div class="col-md-10 col-sm-12 mx-auto my-1">
-            <h3>Risk Factors Associated With Heat-Exacerbated Deaths</h3>
+            <h3 class="h4">Risk Factors Associated With Heat-Exacerbated Deaths</h3>
         </div>
         <div class="col-md-5 ml-auto col-sm-12">
             {{- with .Resources.GetMatch "6-risk.md" -}}
@@ -159,7 +159,7 @@
 
     <div class="row my-3">
         <div class="col-md-10 mx-auto col-sm-12 my-1">
-            <h3>Hotter summers</h3>
+            <h3 class="h4">Hotter summers</h3>
         </div>
         <div class="col-md-5 ml-auto col-sm-12">
             {{- with .Resources.GetMatch "7-hotter-summers.md" -}}
@@ -183,7 +183,7 @@
 
     <div class="row my-3">
         <div class="col-md-10 mx-auto col-sm-12 my-1">
-            <h3>Community-Level Impacts</h3>
+            <h2>Community-Level Impacts</h2>
         </div>
         <div class="col-md-5 ml-auto col-sm-12">
             {{- with .Resources.GetMatch "9-impacts.md" -}}
