fix for subscript issue

--- a/themes/dohmh/layouts/data-features/nyccas-report.html
+++ b/themes/dohmh/layouts/data-features/nyccas-report.html
@@ -81,7 +81,7 @@
                                 </span>
                             </a>
                             <div class="collapse" id="panel-acc-button-{{ .number }}" role="tabpanel" aria-labelledby="acc-button-{{ .number }}" data-parent="#accordion-01">
-                                <div class="card-body bg-white text-black">
+                                <div class="bg-white text-black p-2">
                                     {{ .copy | markdownify }}
                                 </div>
                             </div>
