--- a/themes/dohmh/layouts/data-features/heatstory.html
+++ b/themes/dohmh/layouts/data-features/heatstory.html
@@ -292,7 +292,7 @@
             <p>This project was part of a nationwide campaign from the NIHHIS (National Integrated Heat Health Information System) and jointly developed by NOAA (National Oceanic and Atmospheric Administration) and the CDC (Centers for Disease Control and Prevention). The NYC campaign partnered with South Bronx Unite and was funded by NOAA and Columbia University’s Earth Frontiers Grant. Data collection and analysis were the result of a partnership with CAPA Strategies.</p>
           <ul class="extensible-list">
               </li>
-              <li><strong>Liv Yoon,</strong> Principal Investigator/li>
+              <li><strong>Liv Yoon,</strong> Principal Investigator</li>
                 <li><strong>Christian Braneon,</strong> Co-Investigator</li>
                 <li><strong>Melissa Barber,</strong> Founding Member and Advisory Board Member, South Bronx Unite</li>
                 <li><strong>Mychal Johnson,</strong> Founding Member and Advisory Board Member, South Bronx Unite</li>
