--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -210,6 +210,7 @@
       .vis-bucket {
         clear:both;
         width:100%; 
+        height: 75vmin;
         max-height: 75vmin; 
     }
 
@@ -371,7 +372,7 @@
 
                     <!-- MAP TAB -->
 
-                    <div class="tab-pane fade py-2" id="tab-map" aria-labelledby="tab-btn-map" role="tabpanel">
+                    <div class="tab-pane fade py-2" id="tab-map" aria-labelledby="tab-btn-map" role="tabpanel" style="width:100%!important;">
 
                         <div class="dropdown">
                             <button class="btn btn-sm float-right btn-outline-secondary dropdown-toggle mb-1" type="button"
@@ -400,7 +401,9 @@
 
                         </div>
                     
-                        <div id="map" class="vis-bucket"></div>
+                        <div id="map" class="vis-bucket" style="width:100%!important;">
+                            <p class="sr-only">Data map.</p>
+                        </div>
 
 
                         <div id="map-unreliability" class="asidebox fs-xs">
@@ -847,6 +850,7 @@
             btn.innerHTML = `<i class="fas fa-copy mr-1"></i>Copied!`
             // console.log('citation copied!')
         }
+
             
     </script>
 
