tweak dimensions and measure metadata

--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -359,7 +359,7 @@
                         </div>
                 
                         <span id="tableTitle" class="home-label border-bottom"></span>
-                        <div id="summary-table" class="" style="height:550px!important">
+                        <div id="summary-table" class="" style="">
                             <!-- INSERT SUMMARY TABLE HERE -->
                         </div>
 
